# hardware-enclave

./: AGENTS.md  CLAUDE.md  Cargo.toml  DESIGN.md  INTERFACE_DESIGN.md  README.md  SECURITY.md  THREAT_MODEL.md  libenclaveapp
.github/workflows/: reusable-release.yml
crates/enclave/src/: auth.rs  capabilities.rs  error.rs  exec.rs  factory.rs  integrity.rs  lib.rs  security_key.rs
crates/enclaveapp-app-adapter/: Cargo.toml
crates/enclaveapp-app-adapter/src/: app_spec.rs  binding_store.rs  credential_cache.rs  error.rs  execution_plan.rs  launcher.rs  prepare_launch.rs  resolver.rs  secret_store.rs  state_lock.rs  types.rs  (+1 more)
crates/enclaveapp-app-storage/: Cargo.toml
crates/enclaveapp-apple/: Cargo.toml  README.md
crates/enclaveapp-keyring/: Cargo.toml
crates/enclaveapp-linux-tpm/: Cargo.toml
crates/enclaveapp-test-support/: Cargo.toml  README.md
crates/enclaveapp-windows/: Cargo.toml  README.md
crates/enclaveapp-windows/src/: dpapi_encrypt.rs  dpapi_fallback.rs  encrypt.rs  hello.rs  hello_gate.rs  key.rs  lib.rs  meta_hmac.rs  password_gate.rs  sign.rs  ui_policy.rs
crates/enclaveapp-wsl/: Cargo.toml  README.md
crates/hardware-enclave/: Cargo.toml
docs/: WINDOWS_TEST_MATRIX.md  design-app-adapter-promotion.md  design-cross-platform-meta-hmac.md  design-enclaveapp-app-storage.md  design-meta-hmac-trust-anchor.md  macos-app-bundle-distribution.md
docs/diagrams/: README.md  adapter-integration-types.mmd  app-storage-backend-selection.mmd  encryption-flow.mmd  metadata-trust-boundary.mmd  signing-flow.mmd  workspace-context.mmd  wsl-bridge-flow.mmd
(+62 files in other folders)
