[package]
name = "enclaveapp-windows"
description = "Windows TPM 2.0 backend for enclave (CNG/NCrypt)"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = []
signing = ["sha2"]
encryption = ["sha2"]

[dependencies]
enclaveapp-core = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
aes-gcm = { workspace = true }
elliptic-curve = { workspace = true }
p256 = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true, optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true }
zeroize = { workspace = true }
tracing = "0.1"
